--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <script src="cloneObj.js">
-
-        </script>
+        <script src="cloneObj.js"></script>
     </body>
 </html>
