--- a/trycashs.html
+++ b/trycashs.html
@@ -3,10 +3,10 @@
     <body>
         <h2>   My First Web Page </h2>
         <p> My Frist Patragraph</p>
-        <p>id="demo"</p>
+        <p id="demo"></p>
         <script>
             try{
-                lalala;
+                lalala=0;
             }catch(err){
                 alert(err.name);
                 alert(err.message);
